# DataStructures

./: CMakeLists.txt  README.md  main.c  main.cpp
include/: linkedlist.hpp
include/c-interface/: linkedlist.h
lib/include/: linkedlist.hpp  queue.hpp
lib/src/: linkedlist.cpp
src/: linkedlist.cpp
src/c-interface/: linkedlist.cc
